--- a/package.json
+++ b/package.json
@@ -2,36 +2,21 @@
   "name": "ntask-api",
   "version": "1.0.0",
   "description": "API de gestão de tarefas",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "npm run apidoc && babel-node app.js",
-    "apidoc": "apidoc -i routes/ -o public/apidoc",
-    "test": "mocha test/**/*.js"
+    "start": "babel-node index.js"
   },
-  "apidoc": {
-    "name": "Documentação - Node Task API",
-    "template": {
-      "forceLanguage": "pt_br"
-    }
-  },
-  "author": "Alan Pinhel de Souza",
+  "author": "Alan Pinhel",
   "dependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.0",
+    "body-parser": "^1.15.2",
     "consign": "^0.1.2",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
-    "mongoose": "^4.6.1",
+    "mongoose": "^4.6.6",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.1.0"
-  },
-  "devDependencies": {
-    "apidoc": "^0.16.1",
-    "babel-register": "^6.5.2",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.0",
-    "supertest": "^2.0.0"
+    "passport-jwt": "^2.2.0"
   }
 }
